--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
+config.py
 
 # Created by https://www.gitignore.io/api/python
+
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
@@ -9,7 +11,7 @@ __pycache__/
 
 # C extensions
 *.so
-
+.idea
 # Distribution / packaging
 .Python
 build/
